# pyunderskrift

./: .gitignore  Cargo.toml  README.md  build-wheels.sh  gen-test-fixtures.sh  pyproject.toml  pyunderskrift.pyi
.github/workflows/: ci.yml  release.yml
src/: crypto.rs  enums.rs  extractor.rs  inspect.rs  lib.rs  policy.rs  remote.rs  signer.rs  trust.rs  verify.rs
tests/: test_pyunderskrift.py  test_security.py
tests/fixtures/: ca_cert.pem  chain.pem  intermediate_ca_cert.pem  signer_cert.pem
