[package]
name = "pyunderskrift"
version = "0.1.3"
edition = "2021"
description = "Python bindings for the underskrift PDF signing and verification library"
license = "BSD-2-Clause"

[lib]
name = "pyunderskrift"
crate-type = ["cdylib"]

[dependencies]
underskrift = { version = "0.1.3", features = ["tsp", "ltv", "visual", "verify", "blocking", "saci", "svt", "report", "inspect"] }
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py310"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
